<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Asset Tracking RFID</string>
    <string name="ibex_solutions">IBEX Solutions</string>
    <string name="session_name">Session Name:</string>
    <string name="start_date">Start Date:</string>
    <string name="deleteAllDialog">Delete All Data</string>
    <string name="confirmDeleteDialog">Are you sure you want to delete all data?</string>
    <string name="yesDeleteDialog">Yes</string>
    <string name="noDeleteDialog">No</string>
    <string name="dataDeleted">All data deleted successfully</string>
    <string name="write_your_password">Password</string>
    <string name="write_your_username">Username</string>
    <string name="log_in">LOGIN</string>
    <string name="configure_your_server"><u>Server Configuration</u></string>
    <string name="ip_address">IP Address</string>
    <string name="port">Port</string>
    <string name="test_connection">Test Connection</string>
    <string name="save">Save</string>
    <string name="server_configuration">Server Configuration</string>
    <string name="test_connection_first">Please test the connection first</string>
    <string name="connection_succeeded">Connected Successfully</string>
    <string name="failed_to_connect_check_your_internet">Failed to connect! Check your internet.</string>
    <string name="login_successfully">Login Successfully</string>
    <string name="login_failed">Invalid credentials. Please re-write your username and password.</string>
    <string name="start">Start Inventory</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="welcome">Hello,  </string>
    <string name="download_data">Download Data</string>
    <string name="upload_data">Upload Data</string>
    <string name="delete_all_data">Delete All Data</string>
    <string name="bluetooth_connection">Bluetooth Connection</string>
    <string name="logout">Logout</string>
    <string name="data_downloaded_successfully">All data downloaded Successfully</string>
    <string name="downloadDataDialog">Download Data</string>
    <string name="confirmDownloadDialog">All existing data will be deleted. Do you want to continue?</string>
    <string name="yesDownloadDialog">Yes</string>
    <string name="noDownloadDialog">No</string>
    <string name="progress_bar_start">0% Getting Started</string>
    <string name="progress_bar_process">% Completed</string>
    <string name="end_date">End Date:</string>
    <string name="rfid_status">RFID Status:</string>
    <string name="invalid_url_host">Invalid URL Host</string>
    <string name="inventory_info">Inventory Info</string>
    <string name="choose_location">Choose Location</string>
    <string name="inventory_location">Inventory Location</string>
    <string name="choose_valid_location">Please Choose a Valid Location\n</string>
    <string name="choose_a_location">Please Choose a location</string>
    <string name="start_inventory">Start Inventory</string>
    <string name="location">Location</string>
    <string name="inventory">Inventory</string>
    <string name="barcode">Barcode</string>
    <string name="rfid_tag">RFID Tag</string>
    <string name="end">End</string>
    <string name="assign_tags">Assign Tags</string>
    <string name="activity_intent_filter_action"></string>
    <string name="datawedge_intent_data_String">com.symbol.datawedge.data_string</string>
    <string name="waiting_for_scan">Waiting for scan</string>
    <string name="assign">Assign</string>
    <string name="tag_assigned_successfully">Tag assigned successfully</string>
    <string name="please_scan_the_barcode">Please scan the barcode</string>
    <string name="please_scan_the_rfid">Please scan the rfid</string>
    <string name="invalid_rfid">Invalid RFID</string>
    <string name="server_configuration_saved">Server configuration saved</string>
    <string name="ip_validation">Fill the IP first</string>
    <string name="port_validation">Fill the port first</string>
    <string name="login">Login</string>
    <string name="please_scan_rfid_first">Please scan RFID first</string>
    <string name="please_scan_barcode">Please scan Barcode</string>
    <string name="invalid_barcode">Invalid Barcode</string>
    <string name="invalid_opt3">Invalid RFID</string>
    <string name="rfid_tag_is_already_assigned">RFID tag is already assigned</string>
    <string name="barcode_is_already_assigned">Barcode is already assigned</string>
    <string name="opt3_deleted">OPT3 deleted</string>
    <string name="no_data_to_upload">No data to upload</string>
    <string name="data_uploaded_successfully">Data uploaded successfully</string>
    <string name="failed_to_upload_data">Failed to upload Data</string>
    <string name="no_internet_connection">No internet connection. Please connect to internet first</string>
    <string name="internet_disconnected_while_downloading">Internet disconnected while downloading data. Please retry again</string>
    <string name="internet_disconnected_while_uploading">Internet disconnected while uploading data. Please retry again</string>
    <string name="connecting_to_rfid_reader">Connecting to RFID reader</string>
    <string name="rfid_reader_disappeared">RFID reader disappeared</string>
    <string name="disconnecting_reader">Disconnecting reader</string>
    <string name="bluetoth_off_disconnect">Bluetooth turned off. Disconnecting reader</string>
    <string name="asset_rfid_tracking">Asset Tracking RFID</string>
    <string name="bluetooth_disabled">Bluetooth is not enabled. Enable it to connect to RFID</string>
    <string name="bluetooth_turned_off">Bluetooth is turned off. You need to enabled it</string>
    <string name="confirm">Confirm</string>
    <string name="incorrect_password">Incorrect Password</string>
    <string name="cancel">Cancel</string>
    <string name="validation_required">Validation Required</string>
    <string name="enter_admin_password">Enter Admin Password</string>
    <string name="please_take_a_photo_of_the_following_item">Please take a photo of the following item:\n\n</string>
    <string name="item_barcode">"Item Barcode:       "</string>
    <string name="item_description">"Item Description:  "</string>
    <string name="item_opt3">"Item OPT3:           "</string>
    <string name="bluetooth_permissions_not_granted">Bluetooth Permissions not granted</string>
    <string name="camera_permission_denied">Camera permission denied</string>
    <string name="storage_permission_accepted">Storage permission accepted</string>
    <string name="storage_permission_denied">Storage permission Denied</string>
    <string name="wait_for_connection">Waiting for connection...</string>
    <string name="connected_to">"Connected to : "</string>
    <string name="rfid_reader_connected">RFID Reader Connected</string>
    <string name="rfid_reader_failed">RFID Reader Failed</string>
    <string name="rfid_not_connected">RFID not connected</string>
    <string name="rfid_connected">RFID Connected</string>
    <string name="rfid_is_already_connected">RFID is already connected</string>
    <string name="rfid_reader_appeared">RFID Reader Appeared</string>
    <string name="failed_to_find_or_connect_reader">Failed to find or connect reader</string>
    <string name="disconnected">Disconnected</string>
    <string name="loading">Loading</string>
    <string name="item_desc">Item Desc:</string>
    <string name="description">description</string>
    <string name="remark">Remark:</string>
    <string name="tagid">TagID:</string>
    <string name="tagId">TagID</string>
    <string name="all_tags">All Tags</string>
    <string name="registered">Registered</string>
    <string name="missing">Missing</string>
    <string name="unregistered">Unregistered</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="please_complete_validation">Please complete validation</string>
    <string name="failed_to_connect">Failed to connect</string>
    <string name="rfid_bluetooth_closed">Bluetooth RFID is closed. Turn on RFID Bluetooth and reconnect.</string>
    <string name="connecting_reader">Connecting to the RFID</string>
    <string name="bluetooth_not_support">Device not support bluetooth</string>
    <string name="bluetooth_disabled_rfid_disconnected">Bluetooth disabled, RFID disconnected</string>
    <string name="bluetooth_enabled">Bluetooth Enabled</string>
    <string name="bluetooth_is_required_for_scanning">Bluetooth is required to connect the RFID</string>
    <string name="photo_not_taken">Photo not taken</string>
    <string name="image_saved">Image Saved</string>
    <string name="save_image_failed">Failed to save image</string>
    <string name="take_photo">Take Photo</string>
    <string name="bluetooth_required">Bluetooth Required</string>
    <string name="message_bluetooth_permission">Bluetooth is required to connect to the RFID reader. Do you want to enable Bluetooth?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="bluetooth_declined">Bluetooth is required for scanning</string>
    <string name="not_support_bluetooth">Device doesn\'t support Bluetooth</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="bluetooth_off">Bluetooth Off</string>
    <string name="bluetooth_not_supported">Bluetooth Not Supported</string>
    <string name="image_path">Pictures/SmartScanImages</string>
    <string name="image_type">image/png</string>
    <string name="package_name">package:com.SmartScan</string>
    <string name="userid">USERID</string>
    <string name="inventoryid">INVENTORYID</string>
    <string name="inventorydate">INVENTORYDATE</string>
    <string name="locationid">locationId</string>
</resources>