<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/item_barcode"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/tvItemBarCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.4"
            android:textColor="@color/black"
            android:text="@string/barcode" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/item_desc"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/tvItemDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.4"
            android:textColor="@color/black"
            android:text="@string/description" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/remark"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/tvRemark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.4"
            android:textColor="@color/black"
            android:text="@string/remark" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tagid"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/tvOpt3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.4"
            android:textColor="@color/black"
            android:text="@string/tagId" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginTop="18dp"
        android:background="@color/grey" />
</LinearLayout>